Layout and text changes

--- a/MiddlewareNET6Demo/Pages/Index.cshtml
+++ b/MiddlewareNET6Demo/Pages/Index.cshtml
@@ -1,10 +1,11 @@
 ﻿@page
 @model IndexModel
 @{
-    ViewData["Title"] = "Home page";
+    ViewData["Title"] = "Welcome!";
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Hello Dear Readers!</h1>
+    <p>This app is a demo app for my series on Middleware in ASP.NET 6. It contains several examples of how to use Middleware in common applications.</p>
+    <p></p>
 </div>
